# sentinel

./: .env.example  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  lifespan.py  logging.py
backend/app/database/: database.py
backend/app/modules/system/: router.py
