[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "Infrastructure monitoring system"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116,<0.117",
    "uvicorn>=0.51",
    "pydantic-settings>=2.14",
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.3"
]

readme = "README.md"

authors = [
    { name = "go_fish157" }
]

